[gd_scene load_steps=5 format=3 uid="uid://djbphdqi2rj3y"]

[ext_resource type="PackedScene" uid="uid://d3tegcqp7jjpo" path="res://SaveGame/saved_button.tscn" id="1_7lwks"]
[ext_resource type="Script" path="res://SaveGame/load_screen.gd" id="1_totrj"]
[ext_resource type="Texture2D" uid="uid://dh5ubfpea0bxp" path="res://assests/images/cross_60.png" id="3_1wks1"]
[ext_resource type="Texture2D" uid="uid://dlatnonajcvow" path="res://assests/images/cross_60_red.png" id="4_yprxj"]

[node name="LoadScreen" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_totrj")
load_button_path = ExtResource("1_7lwks")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Load Game"
horizontal_alignment = 1

[node name="CrossButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("3_1wks1")
texture_hover = ExtResource("4_yprxj")

[node name="PanelContainer" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
offset_right = 1920.0
offset_bottom = 182.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxC" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/CrossButton" to="." method="_on_cross_button_pressed"]
